# network-tools

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/network-tools/: host.h
include/nt/: config.h.in  connectionInterface.h  connectionProtocol.h  host.h.old  networkProtocol.h  socket.h  socketErrorHandler.h  udpSocket.h  unistd.h.old
src/network-tools/: host.cpp
src/nt/: host.cpp.old  socket.cpp  socketErrorHandler.cpp  udpSocket.cpp
